--- a/src/main/resources/com/example/taskmanagement/interface.fxml
+++ b/src/main/resources/com/example/taskmanagement/interface.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -10,27 +12,31 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.taskmanagement.HelloController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="280.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.taskmanagement.HelloController">
 <left>
-    <ListView fx:id="listView" prefHeight="400.0" prefWidth="250.0" style="-fx-background-color: #ffff66;" BorderPane.alignment="CENTER" />
+    <ListView fx:id="listView" prefHeight="250.0" prefWidth="215.0" style="-fx-background-color: #ffff66;" BorderPane.alignment="CENTER" />
 </left>
 <center>
-    <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+    <AnchorPane prefHeight="250.0" prefWidth="321.0" BorderPane.alignment="CENTER">
         <children>
-            <Label layoutX="39.0" layoutY="32.0" text="Task Name" />
-            <Label layoutX="39.0" layoutY="63.0" text="Task Description" />
-            <Label layoutX="39.0" layoutY="94.0" text="Deadline" />
-            <TextField layoutX="158.0" layoutY="28.0" AnchorPane.leftAnchor="160.0" AnchorPane.rightAnchor="30.0" />
-            <TextField layoutX="158.0" layoutY="59.0" AnchorPane.leftAnchor="160.0" AnchorPane.rightAnchor="30.0" />
-            <DatePicker layoutX="158.0" layoutY="90.0" AnchorPane.leftAnchor="160.0" AnchorPane.rightAnchor="30.0" />
-            <RadioButton layoutX="41.0" layoutY="131.0" mnemonicParsing="false" text="LOW" >
-                <toggleGroup>
-                    <ToggleGroup fx:id="priority" />
-                </toggleGroup>
-            </RadioButton>
-            <RadioButton layoutX="119.0" layoutY="131.0" mnemonicParsing="false" text="MEDIUM" toggleGroup="$priority"/>
-            <RadioButton layoutX="222.0" layoutY="131.0" mnemonicParsing="false" text="HIGH" toggleGroup="$priority"/>
-            <Button layoutX="267.0" layoutY="344.0" mnemonicParsing="false" text="SAVE" AnchorPane.rightAnchor="30.0" />
+            <Label fx:id="taskType" layoutX="39.0" layoutY="32.0" text="Task type" />
+            <Label fx:id="taskName" layoutX="39.0" layoutY="63.0" text="Task Name" />
+            <Label fx:id="taskDescription" layoutX="39.0" layoutY="94.0" text="Task Description" />
+            <Label fx:id="deadline" layoutX="39.0" layoutY="125.0" text="Deadline" />
+            <ChoiceBox fx:id="taskChoiceBox" layoutX="158.0" layoutY="28.0" prefWidth="150.0" />
+            <TextField fx:id="nameTask" layoutX="158.0" layoutY="59.0" AnchorPane.leftAnchor="160.0" AnchorPane.rightAnchor="30.0" />
+            <TextField fx:id="descriptionTask" layoutX="158.0" layoutY="90.0" AnchorPane.leftAnchor="160.0" AnchorPane.rightAnchor="30.0" />
+            <DatePicker fx:id="deadLine" layoutX="158.0" layoutY="121.0" AnchorPane.leftAnchor="160.0" AnchorPane.rightAnchor="30.0" />
+            <RadioButton fx:id="lowRadioButton" layoutX="41.0" layoutY="168.0" selected="true" text="LOW">
+               <toggleGroup>
+                  <ToggleGroup fx:id="radioGroup" />
+               </toggleGroup></RadioButton>
+            <RadioButton fx:id="mediumRadioButton" layoutX="119.0" layoutY="168.0" text="MEDIUM" toggleGroup="$radioGroup" />
+            <RadioButton fx:id="highRadioButton" layoutX="222.0" layoutY="168.0" text="HIGH" toggleGroup="$radioGroup" />
+            <Label layoutX="39.0" layoutY="205.0" text="Completed" />
+            <CheckBox layoutX="158.0" layoutY="205.0" />
+            <Button layoutX="267.0" layoutY="230.0" onAction="#onSaveButtonClick" text="SAVE" AnchorPane.rightAnchor="30.0" />
+            <Button layoutX="191.0" layoutY="230.0" text="CHANGE" />
         </children>
     </AnchorPane>
 </center>
