--- a/src/main/resources/com/example/taskmanagement/interface.fxml
+++ b/src/main/resources/com/example/taskmanagement/interface.fxml
@@ -14,7 +14,7 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="280.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.taskmanagement.HelloController">
 <left>
-    <ListView fx:id="listView" prefHeight="250.0" prefWidth="215.0" style="-fx-background-color: #ffff66;" BorderPane.alignment="CENTER" />
+    <ListView fx:id="listView" onMouseClicked="#onListViewSelected" prefHeight="250.0" prefWidth="215.0" style="-fx-background-color: #c2ffca;" BorderPane.alignment="CENTER" />
 </left>
 <center>
     <AnchorPane prefHeight="250.0" prefWidth="321.0" BorderPane.alignment="CENTER">
@@ -34,9 +34,9 @@
             <RadioButton fx:id="mediumRadioButton" layoutX="119.0" layoutY="168.0" text="MEDIUM" toggleGroup="$radioGroup" />
             <RadioButton fx:id="highRadioButton" layoutX="222.0" layoutY="168.0" text="HIGH" toggleGroup="$radioGroup" />
             <Label layoutX="39.0" layoutY="205.0" text="Completed" />
-            <CheckBox layoutX="158.0" layoutY="205.0" />
+            <CheckBox fx:id="checkBox" layoutX="158.0" layoutY="205.0" />
             <Button layoutX="267.0" layoutY="230.0" onAction="#onSaveButtonClick" text="SAVE" AnchorPane.rightAnchor="30.0" />
-            <Button layoutX="191.0" layoutY="230.0" text="CHANGE" />
+            <Button layoutX="191.0" layoutY="230.0" onAction="#onChangeButtonClick" text="CHANGE" />
         </children>
     </AnchorPane>
 </center>
