--- a/src/main/resources/com/example/taskmanagement/interface.fxml
+++ b/src/main/resources/com/example/taskmanagement/interface.fxml
@@ -36,7 +36,8 @@
             <Label layoutX="39.0" layoutY="205.0" text="Completed" />
             <CheckBox fx:id="checkBox" layoutX="158.0" layoutY="205.0" />
             <Button layoutX="267.0" layoutY="230.0" onAction="#onSaveButtonClick" text="SAVE" AnchorPane.rightAnchor="30.0" />
-            <Button layoutX="191.0" layoutY="230.0" onAction="#onChangeButtonClick" text="CHANGE" />
+            <Button layoutX="193.0" layoutY="230.0" onAction="#onChangeButtonClick" text="CHANGE" />
+            <Button layoutX="133.0" layoutY="230.0" onAction="#onDeleteButtonClick" text="DELETE" />
         </children>
     </AnchorPane>
 </center>
