--- a/src/main/resources/com/example/taskmanagement/interface.fxml
+++ b/src/main/resources/com/example/taskmanagement/interface.fxml
@@ -12,33 +12,41 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="280.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.taskmanagement.HelloController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="280.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.taskmanagement.HelloController">
 <left>
-    <ListView fx:id="listView" onMouseClicked="#onListViewSelected" prefHeight="250.0" prefWidth="215.0" style="-fx-background-color: #c2ffca;" BorderPane.alignment="CENTER" />
+    <ListView fx:id="listView" onMouseClicked="#onListViewSelected" prefHeight="280.0" prefWidth="224.0" style="-fx-background-color: #c2ffca;" BorderPane.alignment="CENTER" />
 </left>
 <center>
     <AnchorPane prefHeight="250.0" prefWidth="321.0" BorderPane.alignment="CENTER">
-        <children>
-            <Label fx:id="taskType" layoutX="39.0" layoutY="32.0" text="Task type" />
-            <Label fx:id="taskName" layoutX="39.0" layoutY="63.0" text="Task Name" />
-            <Label fx:id="taskDescription" layoutX="39.0" layoutY="94.0" text="Task Description" />
-            <Label fx:id="deadline" layoutX="39.0" layoutY="125.0" text="Deadline" />
-            <ChoiceBox fx:id="taskChoiceBox" layoutX="158.0" layoutY="28.0" prefWidth="150.0" />
-            <TextField fx:id="nameTask" layoutX="158.0" layoutY="59.0" AnchorPane.leftAnchor="160.0" AnchorPane.rightAnchor="30.0" />
-            <TextField fx:id="descriptionTask" layoutX="158.0" layoutY="90.0" AnchorPane.leftAnchor="160.0" AnchorPane.rightAnchor="30.0" />
-            <DatePicker fx:id="deadLine" layoutX="158.0" layoutY="121.0" AnchorPane.leftAnchor="160.0" AnchorPane.rightAnchor="30.0" />
-            <RadioButton fx:id="lowRadioButton" layoutX="41.0" layoutY="168.0" selected="true" text="LOW">
-               <toggleGroup>
-                  <ToggleGroup fx:id="radioGroup" />
-               </toggleGroup></RadioButton>
-            <RadioButton fx:id="mediumRadioButton" layoutX="119.0" layoutY="168.0" text="MEDIUM" toggleGroup="$radioGroup" />
-            <RadioButton fx:id="highRadioButton" layoutX="222.0" layoutY="168.0" text="HIGH" toggleGroup="$radioGroup" />
-            <Label layoutX="39.0" layoutY="205.0" text="Completed" />
-            <CheckBox fx:id="checkBox" layoutX="158.0" layoutY="205.0" />
-            <Button layoutX="267.0" layoutY="230.0" onAction="#onSaveButtonClick" text="SAVE" AnchorPane.rightAnchor="30.0" />
-            <Button layoutX="193.0" layoutY="230.0" onAction="#onChangeButtonClick" text="CHANGE" />
-            <Button layoutX="133.0" layoutY="230.0" onAction="#onDeleteButtonClick" text="DELETE" />
-        </children>
+        <Label layoutX="39.0" layoutY="32.0" text="Task type" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="32.0"/>
+        <Label layoutX="20.0" layoutY="66.0" text="Task Name" AnchorPane.leftAnchor="20.0"/>
+        <Label layoutX="20.0" layoutY="100.0" text="Task Description" AnchorPane.leftAnchor="20.0"/>
+        <Label layoutX="20.0" layoutY="134.0" text="Deadline" AnchorPane.leftAnchor="20.0"/>
+        <Label layoutX="20.0" layoutY="168.0" text="Priority" AnchorPane.leftAnchor="20.0"/>
+        <Label layoutX="20.0" layoutY="199.0" text="Completed" AnchorPane.leftAnchor="20.0"/>
+        <ChoiceBox fx:id="taskChoiceBox" layoutX="158.0" layoutY="28.0" prefWidth="150.0" AnchorPane.leftAnchor="110.0"
+                   AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="28.0"/>
+        <TextField fx:id="nameTask" layoutX="110.0" layoutY="62.0" AnchorPane.leftAnchor="110.0"
+                   AnchorPane.rightAnchor="30.0"/>
+        <TextField fx:id="descriptionTask" layoutX="110.0" layoutY="96.0" AnchorPane.leftAnchor="110.0"
+                   AnchorPane.rightAnchor="30.0"/>
+        <DatePicker fx:id="deadLine" editable="false" layoutX="110.0" layoutY="130.0" AnchorPane.leftAnchor="110.0"
+                    AnchorPane.rightAnchor="30.0"/>
+        <RadioButton fx:id="lowRadioButton" layoutX="110.0" layoutY="164.0" selected="true" text="LOW"
+                     AnchorPane.leftAnchor="110.0">
+            <toggleGroup>
+                <ToggleGroup fx:id="radioGroup"/>
+            </toggleGroup>
+        </RadioButton>
+        <RadioButton fx:id="mediumRadioButton" layoutX="168.0" layoutY="164.0" text="MEDIUM" toggleGroup="$radioGroup"/>
+        <RadioButton fx:id="highRadioButton" layoutX="246.0" layoutY="164.0" text="HIGH" toggleGroup="$radioGroup"
+                     AnchorPane.rightAnchor="30.0"/>
+        <CheckBox fx:id="checkBox" layoutX="110.0" layoutY="199.0" AnchorPane.leftAnchor="110.0"/>
+        <Button layoutX="267.0" layoutY="230.0" onAction="#onSaveButtonClick" text="SAVE"
+                AnchorPane.rightAnchor="30.0"/>
+        <Button layoutX="196.0" layoutY="230.0" onAction="#onClearButtonClick" text="CLEAR"/>
+        <Button layoutX="136.0" layoutY="230.0" onAction="#onDeleteButtonClick" text="DELETE"
+                AnchorPane.bottomAnchor="25.0"/>
     </AnchorPane>
 </center>
 </BorderPane>
